  * Moloch >= 2.0.0 requires NodeJS 10.x
  * Moloch >= 1.6.0 requires NodeJS 8.x, 8.12 or later
  * Moloch >= 1.0.0 requires NodeJS 8.x
  * Moloch >= 0.20.0 requires NodeJS 6.x
  * Moloch >= 0.18.1 requires NodeJS 4.x

NOTICE: Restart wiseService before capture when upgrading
NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at once after upgrading

3.2.2 2022/01/xx
  - viewer - default to hunt reassembled packets
  - viewer - add descriptions to hunts
  - viewer - hide graph/map (speeds up large queries)
  - viewer - history logs es query/indices
  - viewer - open up to 50 sessions at a time button
  - viewer - make sure hunt progress bar shows up
  - viewer - handle corrupt pcap files better
  - viewer - handle hunt errors better
  - capture - make sure file/seq es requests have higher priority
  - capture - support pcap flies with 0 timestamp
  - capture - use .arkime file extension for non standard pcap files
  - all - support creating gzip files, set simpleGzipBlockSize

3.2.1 2021/12/14
  - esproxy - handle sessions2 without prefix
  - capture - new parseHTTPHeaderValueMaxLen replaces hard coded 1024
  - viewer - some hunt fixes
  - viewer - switch from ES bool MUST to FILTER
  - viewer - increase elasticsearchScrollTimeout default
  - viewer - new AND arrays with ][ syntax vs OR arrays with []
  - viewer - fix --insecure which broke in 3.2.0
  - viewer - ES Nodes has new uptime stat
  - viewer - fix 3.x sending to remote cluster
  - viewer - disable periodic queries on multiviewer
  - viewer - history can always toggle open and show api
  - wise - fixed views that used require: not working
  - db.pl - sync-files, add-missing, and other fixes since 3.x

3.2.0 2021/12/07
  - release - node 14.18.2
  - release - remove daily.sh, setup a cron directly now
  - all - refactor some shared code into common directory
  - capture - fix memory leak with ip4 frags and packet q overflowing