@@ -1,4 +1,4 @@
-use Test::More tests => 120;
+use Test::More tests => 144;
 use Cwd;
 use URI::Escape;
 use MolochTest;
@@ -9,6 +9,8 @@ use strict;
 my $json;
 
 my $prefix = int(rand()*100000);
+my $token = getTokenCookie();
+
 sub doTest {
     my ($encryption, $gzip, $shortheader) = @_;
     my $tag = "$prefix-$encryption-$gzip-$shortheader";
@@ -26,10 +28,23 @@ sub doTest {
     #diag "$cmd\n";
     system($cmd);
 
-    countTest(3, "date=-1&expression=" . uri_escape("tags=$tag"));
     my $json = countTest(1, "date=-1&expression=" . uri_escape("tags=$tag && port.src == 54072"));
-
     my $id = $json->{data}->[0]->{id};
+
+    $json = countTest(1, "date=-1&expression=" . uri_escape("tags=$tag && port.src == 54068"));
+    my $sid = $json->{data}->[0]->{id};
+
+    my $content = $MolochTest::userAgent->get("http://$MolochTest::host:8123/test/session/$id/packets?line=false&ts=false&base=ascii")->content;
+    #diag $content;
+
+    # Test string crosses 2 packets
+    ok ($content =~ /domain in examples without prior coordination or asking for permission/);
+
+    # Scrub
+    my $result = viewerPostToken("/delete?removePcap=true&removeSpi=false&date=-1", "ids=$sid", $token);
+    #diag Dumper($result);
+
+    # Test again, not the same that was scrubbed
     my $content = $MolochTest::userAgent->get("http://$MolochTest::host:8123/test/session/$id/packets?line=false&ts=false&base=ascii")->content;
     #diag $content;
 
